# galois

./: .gitmodules  CMakeLists.txt  License.md  README.md
benchmarks/: matrix_multiplication.cc
scripts/: parse_benchmarks.py  run_benchmarks.sh
src/: field.cc  field.h
tests/: field_tests.cc
